[package]
name = "iron_curl"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "iron_curl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3.30"
